--- a/2-Procesamiento.ipynb
+++ b/2-Procesamiento.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
     "\n",
     "\n",
     "\n",
-    "# # # GUARDAR DF DE PANDAS EN FORMATO CSV\n",
+    "# GUARDAR DF DE PANDAS EN FORMATO CSV\n",
     "# guardar_csv(dfPandas_stations, 'Datos/Datos_Procesados/Stations','Stations')\n",
     "# guardar_csv(dfPandas_currentConditions, 'Datos/Datos_Procesados/CurrentConditions', 'CurrentConditions')\n",
     "# guardar_csv(dfPandas_Days, 'Datos/Datos_Procesados/Days', 'Days')\n",
@@ -854,272 +854,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intentando conexión a MySQL.\n",
-      "Conexión exitosa\n",
-      "Error en la creación de tablas: (1822, \"Failed to add the foreign key constraint. Missing index for constraint 'stations_relations_ibfk_1' in the referenced table 'stations'\")\n",
-      "Datos insertados correctamente en la tabla stations.\n",
-      "Error en la inserción de datos: \"current_conditions\" / (1054, \"Unknown column 'stationsID_1' in 'field list'\")\n",
-      "Error en la inserción de datos: \"days\" / (1054, \"Unknown column 'stationsID_1' in 'field list'\")\n",
-      "Error en la inserción de datos: \"days_hours\" / (1054, \"Unknown column 'stationsID_1' in 'field list'\")\n",
-      "Datos insertados correctamente en la tabla city.\n",
-      "Error insertando relaciones: (1146, \"Table 'proyecto_clima.stations_relations' doesn't exist\")\n",
-      "Datos insertados exitosamente\n",
-      "Conexión cerrada con éxito.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pymysql\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "user = os.environ.get('MYSQL_USER')\n",
-    "password = os.environ.get('MYSQL_PASSWORD')\n",
-    "host = os.environ.get('MYSQL_HOST')\n",
-    "database = os.environ.get('MYSQL_DATABASE')\n",
-    "port = int(os.environ.get('MYSQL_PORT', 3306))\n",
-    "\n",
-    "\n",
-    "def insertar_datos_a_tabla(cursor, tabla, columnas, datos):\n",
-    "    \n",
-    "    try:\n",
-    "        placeholders = ', '.join(['%s'] * len(columnas))\n",
-    "        insert_query = f\"INSERT INTO {tabla} ({', '.join(columnas)}) VALUES ({placeholders})\"\n",
-    "\n",
-    "        cursor.executemany(insert_query, datos)\n",
-    "        print(f'Datos insertados correctamente en la tabla {tabla}.')\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f'Error en la inserción de datos: \"{tabla}\" / {e}')\n",
-    "\n",
-    "\n",
-    "def crear_tablas(cursor):\n",
-    "    \n",
-    "    try:\n",
-    "        tablas = [\n",
-    "            ''' \n",
-    "            CREATE TABLE IF NOT EXISTS stations (\n",
-    "               contribution FLOAT,\n",
-    "               distance FLOAT,\n",
-    "               id VARCHAR(15) UNIQUE,\n",
-    "               latitude FLOAT,\n",
-    "               longitude FLOAT,\n",
-    "               name VARCHAR(50),\n",
-    "               quality INT,\n",
-    "               useCount INT,\n",
-    "               id_stations INT\n",
-    "            );\n",
-    "            ''',\n",
-    "            '''\n",
-    "            CREATE TABLE IF NOT EXISTS current_conditions (\n",
-    "            id_currentConditions INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "            currentConditions_cloudcover FLOAT,\n",
-    "            currentConditions_conditions VARCHAR(250),\n",
-    "            currentConditions_datetime TIME,\n",
-    "            currentConditions_datetimeEpoch INT, \n",
-    "            currentConditions_dew FLOAT,\n",
-    "            currentConditions_feelslike FLOAT,\n",
-    "            currentConditions_humidity FLOAT,\n",
-    "            currentConditions_icon VARCHAR(100),\n",
-    "            currentConditions_moonphase FLOAT,\n",
-    "            currentConditions_precip FLOAT,\n",
-    "            currentConditions_precipprob FLOAT,\n",
-    "            currentConditions_preciptype VARCHAR(100),\n",
-    "            currentConditions_pressure FLOAT,\n",
-    "            currentConditions_snow FLOAT, \n",
-    "            currentConditions_snowdepth FLOAT,\n",
-    "            currentConditions_solarenergy FLOAT,\n",
-    "            currentConditions_solarradiation FLOAT,\n",
-    "            currentConditions_source VARCHAR(50),\n",
-    "            currentConditions_sunrise TIME,\n",
-    "            currentConditions_sunriseEpoch INT, \n",
-    "            currentConditions_sunset TIME,\n",
-    "            currentConditions_sunsetEpoch INT,\n",
-    "            currentConditions_temp FLOAT,\n",
-    "            currentConditions_uvindex FLOAT, \n",
-    "            currentConditions_visibility FLOAT,\n",
-    "            currentConditions_winddir FLOAT,\n",
-    "            currentConditions_windgust FLOAT, \n",
-    "            currentConditions_windspeed FLOAT\n",
-    "            );\n",
-    "            ''',\n",
-    "            ''' \n",
-    "            CREATE TABLE IF NOT EXISTS days (\n",
-    "                id_days INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "                days_cloudcover FLOAT,\n",
-    "                days_conditions VARCHAR(200),\n",
-    "                days_datetime DATE,\n",
-    "                days_datetimeEpoch INT,\n",
-    "                days_description VARCHAR(200),\n",
-    "                days_dew FLOAT,\n",
-    "                days_feelslike FLOAT,\n",
-    "                days_feelslikemax FLOAT, \n",
-    "                days_feelslikemin FLOAT, \n",
-    "                days_humidity FLOAT, \n",
-    "                days_icon VARCHAR(50),\n",
-    "                days_moonphase FLOAT, \n",
-    "                days_precip FLOAT, \n",
-    "                days_precipcover FLOAT, \n",
-    "                days_precipprob FLOAT,\n",
-    "                days_preciptype VARCHAR(50),\n",
-    "                days_pressure FLOAT, \n",
-    "                days_severerisk FLOAT, \n",
-    "                days_snow FLOAT, \n",
-    "                days_snowdepth FLOAT, \n",
-    "                days_solarenergy FLOAT,\n",
-    "                days_solarradiation FLOAT,\n",
-    "                days_source VARCHAR(50),\n",
-    "                days_stations VARCHAR(200),\n",
-    "                days_sunrise TIME,\n",
-    "                days_sunriseEpoch INT,\n",
-    "                days_sunset TIME,\n",
-    "                days_sunsetEpoch INT,\n",
-    "                days_temp FLOAT, \n",
-    "                days_tempmax FLOAT,\n",
-    "                days_tempmin FLOAT,\n",
-    "                days_uvindex FLOAT,\n",
-    "                days_visibility FLOAT,\n",
-    "                days_winddir FLOAT,\n",
-    "                days_windgust FLOAT,\n",
-    "                days_windspeed FLOAT\n",
-    "            );\n",
-    "            ''',\n",
-    "            ''' \n",
-    "            CREATE TABLE IF NOT EXISTS days_hours (\n",
-    "                id_daysHours INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "                days_hours_cloudcover FLOAT,\n",
-    "                days_hours_conditions VARCHAR(200),\n",
-    "                days_hours_datetime TIME,\n",
-    "                days_hours_datetimeEpoch INT, \n",
-    "                days_hours_dew FLOAT,\n",
-    "                days_hours_feelslike FLOAT,\n",
-    "                days_hours_humidity FLOAT,\n",
-    "                days_hours_icon VARCHAR(200),\n",
-    "                days_hours_precip FLOAT,\n",
-    "                days_hours_precipprob FLOAT,\n",
-    "                days_hours_preciptype VARCHAR(200),\n",
-    "                days_hours_pressure FLOAT,\n",
-    "                days_hours_severerisk FLOAT,\n",
-    "                days_hours_snow FLOAT,\n",
-    "                days_hours_snowdepth FLOAT,\n",
-    "                days_hours_solarenergy FLOAT,\n",
-    "                days_hours_solarradiation FLOAT,\n",
-    "                days_hours_source VARCHAR(50),\n",
-    "                days_hours_stations VARCHAR(200),\n",
-    "                days_hours_temp FLOAT,\n",
-    "                days_hours_uvindex FLOAT,\n",
-    "                days_hours_visibility FLOAT,\n",
-    "                days_hours_winddir FLOAT,\n",
-    "                days_hours_windgust FLOAT,\n",
-    "                days_hours_windspeed FLOAT\n",
-    "            );\n",
-    "            ''',\n",
-    "            ''' \n",
-    "            CREATE TABLE IF NOT EXISTS city (\n",
-    "                id_city INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "                address VARCHAR(50),\n",
-    "                description VARCHAR(300),\n",
-    "                latitude FLOAT,\n",
-    "                longitude FLOAT,\n",
-    "                queryCost INT, \n",
-    "                resolvedAddress VARCHAR(100),\n",
-    "                timezone VARCHAR(100),\n",
-    "                tzoffset FLOAT\n",
-    "            );\n",
-    "            ''',\n",
-    "            ''' \n",
-    "            CREATE TABLE IF NOT EXISTS stations_relations (\n",
-    "            id_relations INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "            id_stations INT NULL,\n",
-    "            id_currentConditions INT NULL,\n",
-    "            id_days INT NULL,\n",
-    "            id_daysHours INT NULL,\n",
-    "            FOREIGN KEY (id_stations) REFERENCES stations(id_stations),\n",
-    "            FOREIGN KEY (id_currentConditions) REFERENCES current_conditions(id_currentConditions),\n",
-    "            FOREIGN KEY (id_days) REFERENCES days(id_days),\n",
-    "            FOREIGN KEY (id_daysHours) REFERENCES days_hours(id_daysHours)\n",
-    "            );\n",
-    "            '''\n",
-    "        ]\n",
-    "        \n",
-    "        for query in tablas:\n",
-    "            cursor.execute(query)\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f'Error en la creación de tablas: {e}')\n",
-    "\n",
-    "\n",
-    "def insertar_relaciones(cursor):\n",
-    "    \n",
-    "    try:\n",
-    "        query = ''' \n",
-    "            INSERT INTO stations_relations (id_stations, id_currentConditions, id_days, id_daysHours)\n",
-    "            SELECT DISTINCT s.id_stations, c.id_currentConditions, d.id_days, dh.id_daysHours\n",
-    "            FROM stations s\n",
-    "            LEFT JOIN current_conditions c ON FIND_IN_SET(s.id, c.currentConditions_stations)\n",
-    "            LEFT JOIN days d ON FIND_IN_SET(s.id, d.days_stations)\n",
-    "            LEFT JOIN days_hours dh ON FIND_IN_SET(s.id, dh.days_hours_stations);        \n",
-    "        '''\n",
-    "        cursor.execute(query)\n",
-    "        print('Relaciones en \"stations_relations\" insertadas correctamente.')\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f'Error insertando relaciones: {e}')\n",
-    "    \n",
-    "\n",
-    "def main():\n",
-    "    \n",
-    "    print('Intentando conexión a MySQL.')\n",
-    "    \n",
-    "    try:\n",
-    "        conexion = pymysql.connect(user= user, password= password,\n",
-    "                                        host= host,   \n",
-    "                                        database = database,\n",
-    "                                        port = port)\n",
-    "        print(\"Conexión exitosa\")\n",
-    "    \n",
-    "        cursor = conexion.cursor()\n",
-    "        \n",
-    "        crear_tablas(cursor)\n",
-    "        \n",
-    "        dataframes = {\n",
-    "            'stations' : dfPandas_stations,\n",
-    "            'current_conditions' : dfPandas_currentConditions,\n",
-    "            'days' : dfPandas_Days,\n",
-    "            'days_hours' : dfPandas_DayHours,\n",
-    "            'city' : dfPandas_Original\n",
-    "        }\n",
-    "        \n",
-    "        for tabla, df in dataframes.items():\n",
-    "            \n",
-    "            columnas = df.columns.tolist()\n",
-    "            datos = [tuple(row) for row in df.values]\n",
-    "        \n",
-    "            insertar_datos_a_tabla(cursor, tabla, columnas, datos)\n",
-    "        \n",
-    "        insertar_relaciones(cursor)\n",
-    "        conexion.commit()\n",
-    "        print('Datos insertados exitosamente')\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f'Error en la conexión: {e}')\n",
-    "        \n",
-    "    finally: \n",
-    "        conexion.close()\n",
-    "        print('Conexión cerrada con éxito.')\n",
-    "\n",
-    "main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1128,6 +862,27 @@
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "dfPandas_DayHours_hora.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'diccionario_columnas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdiccionario_columnas\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'diccionario_columnas' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario_columnas"
    ]
   },
   {
